<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/fragment_about_version_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:text="TDTChannels - Version X"
            android:textSize="16sp" />

        <laquay.com.open.canalestdt.component.AboutTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_social_networks"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/fragment_settings_website_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/about_website" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_share_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_menu_share" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/about_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_telegram_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/telegram" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="11.5dp"
                android:text="@string/about_telegram" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_main_repo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/about_main_repo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_main_repo_source_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/about_main_repo_source" />
        </LinearLayout>

        <laquay.com.open.canalestdt.component.AboutTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_donate" />

        <LinearLayout
            android:id="@+id/fragment_settings_buy_coffee_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/about_donate_text" />

            <ImageView
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/buy_me_a_coffee_logo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_400" />

        <laquay.com.open.canalestdt.component.AboutTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_tv_and_radio_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_settings_tv_radio_report_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_tv_and_radio" />

        <laquay.com.open.canalestdt.component.AboutTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_improvement_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_settings_app_report_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_improvement" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@color/grey_400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_info" />

        <laquay.com.open.canalestdt.component.AboutTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_license"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volley" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exoplayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GSON" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Glide" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>